# romeo-sot

./: CMakeLists.txt  README.md  romeo.pc.cmake
data/: CMakeLists.txt  HeadRoll.wrl  LAnkleRoll.wrl  LAnkleRollBasic.wrl  LElbowYaw.wrl  LHand.wrl  LHipPitch.wrl  LKneePitch.wrl  LShoulderYaw.wrl  LThumb.wrl  LToePitch.wrl  LWristPitch.wrl  LWristRoll.wrl  NeckPitch.wrl  Phalax.wrl  PhalaxEnd.wrl  RAnkleRoll.wrl  RAnkleRollBasic.wrl  RElbowYaw.wrl  RHand.wrl  RHipPitch.wrl  RKneePitch.wrl  RShoulderYaw.wrl  RThumb.wrl  RToePitch.wrl  RWristPitch.wrl  RWristRoll.wrl  Romeo.wrl  RomeoHands.wrl  RomeoHandsLinkJointRank.xml  RomeoHandsNoToes.wrl  RomeoHandsNoToesLinkJointRank.xml  RomeoHandsNoToesSpecificities.xml  RomeoHandsSpecificities.xml  RomeoLinkJointRank.xml  RomeoNoToes.wrl  RomeoNoToesLinkJointRank.xml  RomeoNoToesSpecificities.xml  RomeoSpecificities.xml  Torso.wrl  (+8 more)
doc/: footer.html  header.html  package.dox.cmake
doc/additionalDoc/: package.h
doc/pictures/: footer.txt
include/: CMakeLists.txt
include/romeo/: romeo.h
include/romeo-notoes/: romeo-notoes.h
python/: CMakeLists.txt  dyn_romeo_notoes.py  kinesimple_romeo_notoes.py  robotSpecific_romeo.py  robotSpecific_romeo.py.cmake  robotSpecific_romeo_hands.py.cmake  robotSpecific_romeo_hands_notoes.py.cmake  robotSpecific_romeo_notoes.py  robotSpecific_romeo_notoes.py.cmake
